[package]
name = "vulpes-scanner"
version = "0.1.0"
edition = "2024"
authors = ["Sunny Shaban Ali <reach@sunnyallana@gmail.com>"]
description = "Fast multi-threaded security scanner for discovering attack surfaces"
license = "MIT"
repository = "https://github.com/yourusername/vulpes"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
rayon = "1.5"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2", features = ["derive"] }
indicatif = "0.17"
colored = "2.0"
trust-dns-resolver = "0.23"
regex = "1.10"
